--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,13 @@
 	<artifactId>asset</artifactId>
 	<version>0.1.0</version>
 	<packaging>jar</packaging>
-
 	<name>asset</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
+		<version>2.0.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -22,9 +21,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<mybatis-spring-boot.version>1.3.1</mybatis-spring-boot.version>
-		<shiro-spring.version>1.3.2</shiro-spring.version>
-		<swagger2.version>2.7.0</swagger2.version>
+		<mybatis-spring-boot.version>1.3.2</mybatis-spring-boot.version>
+		<shiro-spring.version>1.4.0</shiro-spring.version>
+		<swagger2.version>2.9.2</swagger2.version>
+		<driud.version>1.1.10</driud.version>
 	</properties>
 
 	<dependencies>
@@ -32,14 +32,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>${mybatis-spring-boot.version}</version>
+			<exclusions>
+			<!-- 去除默认连接池 -->
+				<exclusion>
+					<groupId>com.zaxxer</groupId>
+					<artifactId>HikariCP</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- 使用阿里druid -->
+			<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${driud.version}</version>
 		</dependency>
 
 		<dependency>
@@ -50,11 +60,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
-		</dependency>
+		</dependency> -->
 
 		<!-- runtime -->
 		<dependency>
@@ -94,6 +104,19 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger2.version}</version>
 		</dependency>
+		
+		
+		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.7-1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>1.12.4</version>
+		</dependency>
 
 	</dependencies>
 
@@ -102,10 +125,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<finalName>asset</finalName>
-					<excludeDevtools>false</excludeDevtools>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
