--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/asset?useUnicode=true&characte
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
